tests/js/valid/when/type-checks.buri
color: #red | #rgb(Int, Int, Int) = #red
result1 = when color is
    #rgb(red, green, blue) do "custom color"
    #red do "red"

result2 = when #rgb(0, 0, 0) is
    #rgb(red, green, blue) do 1

blue: #red | #blue = #blue
result3 = when blue is
    #red do 1
    _ do 2

result4 = when #red is
    #blue do 1
    _ do 2