tests/js/invalid/when/mismatched-types-0.buri
x: #red | #green = #red
result = when x is
    #red do 1
    #green do "hello"